--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,20 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Speed limit (30km/h)\n",
+      "all done\n"
+     ]
+    }
+   ],
    "source": [
     "# Load pickled data\n",
+    "import csv\n",
     "import pickle\n",
+    "import numpy as np\n",
     "\n",
-    "# TODO: Fill this in based on where you saved the training and testing data\n",
+    "training_file   = './train.p'\n",
+    "validation_file = './valid.p'\n",
+    "testing_file    = './test.p'\n",
+    "names_file      = './signnames.csv'\n",
     "\n",
-    "training_file = ?\n",
-    "validation_file=?\n",
-    "testing_file = ?\n",
+    "with open(names_file) as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    next(reader) # skip first row\n",
+    "    names = {int(rows[0]):rows[1] for rows in reader}\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -57,7 +70,9 @@
     "    \n",
     "X_train, y_train = train['features'], train['labels']\n",
     "X_valid, y_valid = valid['features'], valid['labels']\n",
-    "X_test, y_test = test['features'], test['labels']"
+    "X_test, y_test   =  test['features'],  test['labels']\n",
+    "\n",
+    "print('all done')"
    ]
   },
   {
@@ -86,30 +101,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Replace each question mark with the appropriate value. \n",
-    "### Use python, pandas or numpy methods rather than hard coding the results\n",
+    "### Include an exploratory visualization of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples = 34799\n",
+      "Number of testing examples = 12630\n",
+      "Image data shape = (32, 32, 3)\n",
+      "Number of classes = 43\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "# TODO: Number of training examples\n",
-    "n_train = ?\n",
     "\n",
-    "# TODO: Number of validation examples\n",
-    "n_validation = ?\n",
+    "# Number of training examples\n",
+    "n_train = np.shape(X_train)[0]\n",
     "\n",
-    "# TODO: Number of testing examples.\n",
-    "n_test = ?\n",
+    "# Number of validation examples\n",
+    "n_validation = np.shape(X_valid)[0]\n",
     "\n",
-    "# TODO: What's the shape of an traffic sign image?\n",
-    "image_shape = ?\n",
+    "# Number of testing examples.\n",
+    "n_test = np.shape(X_test)[0]\n",
     "\n",
-    "# TODO: How many unique classes/labels there are in the dataset.\n",
-    "n_classes = ?\n",
+    "# What's the shape of an traffic sign image?\n",
+    "image_shape = np.shape(X_train[0])\n",
+    "\n",
+    "# How many unique classes/labels there are in the dataset.\n",
+    "n_classes = len(set(y_train))\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
     "print(\"Number of testing examples =\", n_test)\n",
@@ -118,11 +148,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Include an exploratory visualization of the dataset"
+    "import random\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "for x in range(10):\n",
+    "    index = random.randint(0, len(X_train))\n",
+    "    image = X_train[index].squeeze()\n",
+    "\n",
+    "    plt.figure(figsize=(1,1))\n",
+    "    plt.title(names[y_train[index]])\n",
+    "    #plt.subplot(1,10,x+1)\n",
+    "    plt.imshow(image) # showing with cmap='gray' does not seem to have any affect\n",
+    "    plt.show()\n",
+    "    print(y_train[x])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -133,21 +188,6 @@
     "The [Matplotlib](http://matplotlib.org/) [examples](http://matplotlib.org/examples/index.html) and [gallery](http://matplotlib.org/gallery.html) pages are a great resource for doing visualizations in Python.\n",
     "\n",
     "**NOTE:** It's recommended you start with something simple first. If you wish to do more, come back to it after you've completed the rest of the sections. It can be interesting to look at the distribution of classes in the training, validation and test set. Is the distribution the same? Are there more examples of some classes than others?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "### Data exploration visualization code goes here.\n",
-    "### Feel free to use as many code cells as needed.\n",
-    "import matplotlib.pyplot as plt\n",
-    "# Visualizations will be shown in the notebook.\n",
-    "%matplotlib inline"
    ]
   },
   {
@@ -202,7 +242,13 @@
    "source": [
     "### Preprocess the data here. It is required to normalize the data. Other preprocessing steps could include \n",
     "### converting to grayscale, etc.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, y_train = shuffle(X_train, y_train)\n",
+    "X_train, X_validation, y_train, y_validation = train_test_split(X_train, y_train, test_size=0.2, random_state=0)\n"
    ]
   },
   {
@@ -214,14 +260,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All done\n"
+     ]
+    }
+   ],
    "source": [
-    "### Define your architecture here.\n",
-    "### Feel free to use as many code cells as needed."
+    "import tensorflow as tf\n",
+    "from tensorflow.contrib.layers import flatten\n",
+    "\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 128\n",
+    "\n",
+    "def LeNet(x):    \n",
+    "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
+    "    mu = 0\n",
+    "    sigma = 0.1\n",
+    "    \n",
+    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "\n",
+    "    # Activation.\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\n",
+    "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "    \n",
+    "    # Activation.\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "\n",
+    "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # Flatten. Input = 5x5x16. Output = 400.\n",
+    "    fc0   = flatten(conv2)\n",
+    "    \n",
+    "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
+    "    \n",
+    "    # Activation.\n",
+    "    fc1    = tf.nn.relu(fc1)\n",
+    "\n",
+    "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
+    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
+    "    \n",
+    "    # Activation.\n",
+    "    fc2    = tf.nn.relu(fc2)\n",
+    "\n",
+    "    # Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
+    "    fc3_b  = tf.Variable(tf.zeros(43))\n",
+    "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "    \n",
+    "    return logits\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "one_hot_y = tf.one_hot(y, 43)\n",
+    "\n",
+    "print('All done')"
    ]
   },
   {
@@ -232,26 +346,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.473\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.764\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.856\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.905\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.916\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.926\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.930\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.947\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.946\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.933\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Train your model here.\n",
+    "rate = 0.001\n",
+    "\n",
+    "logits = LeNet(x)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "training_operation = optimizer.minimize(loss_operation)\n",
+    "\n",
+    "\n",
+    "### Calculate and report the accuracy on the training and validation set.\n",
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
+    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "def evaluate(X_data, y_data):\n",
+    "    num_examples = len(X_data)\n",
+    "    total_accuracy = 0\n",
+    "    sess = tf.get_default_session()\n",
+    "    for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "        total_accuracy += (accuracy * len(batch_x))\n",
+    "    return total_accuracy / num_examples\n",
+    "\n",
+    "\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    num_examples = len(X_train)\n",
+    "    \n",
+    "    print(\"Training...\")\n",
+    "    print()\n",
+    "    for i in range(EPOCHS):\n",
+    "        X_train, y_train = shuffle(X_train, y_train)\n",
+    "        for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "            end = offset + BATCH_SIZE\n",
+    "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
+    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "            \n",
+    "        validation_accuracy = evaluate(X_validation, y_validation)\n",
+    "        print(\"EPOCH {} ...\".format(i+1))\n",
+    "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "        print()\n",
+    "        \n",
+    "    saver.save(sess, './traffick')\n",
+    "    print(\"Model saved\")\n",
+    "    \n",
+    "\n",
+    "### Once a final model architecture is selected, \n",
+    "### the accuracy on the test set should be calculated and reported as well.\n",
+    "### Feel free to use as many code cells as needed."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "A validation set can be used to assess how well the model is performing. A low accuracy on the training and validation\n",
     "sets imply underfitting. A high accuracy on the training set but low accuracy on the validation set implies overfitting."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "### Train your model here.\n",
-    "### Calculate and report the accuracy on the training and validation set.\n",
-    "### Once a final model architecture is selected, \n",
-    "### the accuracy on the test set should be calculated and reported as well.\n",
-    "### Feel free to use as many code cells as needed."
    ]
   },
   {
@@ -282,7 +481,7 @@
    },
    "outputs": [],
    "source": [
-    "### Load the images and plot them here.\n",
+    "### Loawd the images and plot them here.\n",
     "### Feel free to use as many code cells as needed."
    ]
   },
@@ -485,6 +684,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
