--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -470,29 +470,32 @@
     "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
     "\n",
-    "EPOCHS = 15\n",
-    "BATCH_SIZE = 512 #orig 128\n",
+    "EPOCHS = 36\n",
+    "BATCH_SIZE = 1024 #orig 128\n",
     "# Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "mu = 0\n",
     "sigma = 0.1\n",
+    "keep_probability = 0.5\n",
     "\n",
     "# Declaring weights outside method for access later.  CLEANME: Move this to a proper class\n",
-    "conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
-    "conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "depth_conv1 = 10\n",
+    "conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, depth_conv1), mean = mu, stddev = sigma))\n",
+    "conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, depth_conv1, 16), mean = mu, stddev = sigma))\n",
     "fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
     "fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
     "fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
+    "keep_prob = tf.placeholder(tf.float32) # probability to keep units\n",
     "\n",
     "def LeNet(x):    \n",
     "\n",
-    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28xdepth_conv1.\n",
+    "    conv1_b = tf.Variable(tf.zeros(depth_conv1))\n",
     "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
     "    # Activation.\n",
     "    conv1 = tf.nn.relu(conv1)\n",
     "\n",
-    "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    # Pooling. Input = 28x28x10. Output = 14x14xdepth_conv1.\n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
     "    # Layer 2: Convolutional. Output = 10x10x16.\n",
@@ -544,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -554,53 +557,116 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.320\n",
+      "Validation Accuracy = 0.160\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.615\n",
+      "Validation Accuracy = 0.346\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.759\n",
+      "Validation Accuracy = 0.515\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.817\n",
+      "Validation Accuracy = 0.629\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.851\n",
+      "Validation Accuracy = 0.706\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.864\n",
+      "Validation Accuracy = 0.746\n",
       "\n",
       "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.886\n",
+      "Validation Accuracy = 0.794\n",
       "\n",
       "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.906\n",
+      "Validation Accuracy = 0.825\n",
       "\n",
       "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.900\n",
+      "Validation Accuracy = 0.851\n",
       "\n",
       "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.909\n",
+      "Validation Accuracy = 0.874\n",
       "\n",
       "EPOCH 11 ...\n",
-      "Validation Accuracy = 0.877\n",
+      "Validation Accuracy = 0.854\n",
       "\n",
       "EPOCH 12 ...\n",
-      "Validation Accuracy = 0.921\n",
+      "Validation Accuracy = 0.899\n",
       "\n",
       "EPOCH 13 ...\n",
-      "Validation Accuracy = 0.905\n",
+      "Validation Accuracy = 0.902\n",
       "\n",
       "EPOCH 14 ...\n",
-      "Validation Accuracy = 0.938\n",
+      "Validation Accuracy = 0.913\n",
       "\n",
       "EPOCH 15 ...\n",
-      "Validation Accuracy = 0.933\n",
+      "Validation Accuracy = 0.906\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.919\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.904\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation Accuracy = 0.926\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation Accuracy = 0.927\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation Accuracy = 0.934\n",
+      "\n",
+      "EPOCH 21 ...\n",
+      "Validation Accuracy = 0.936\n",
+      "\n",
+      "EPOCH 22 ...\n",
+      "Validation Accuracy = 0.940\n",
+      "\n",
+      "EPOCH 23 ...\n",
+      "Validation Accuracy = 0.927\n",
+      "\n",
+      "EPOCH 24 ...\n",
+      "Validation Accuracy = 0.935\n",
+      "\n",
+      "EPOCH 25 ...\n",
+      "Validation Accuracy = 0.931\n",
+      "\n",
+      "EPOCH 26 ...\n",
+      "Validation Accuracy = 0.931\n",
+      "\n",
+      "EPOCH 27 ...\n",
+      "Validation Accuracy = 0.926\n",
+      "\n",
+      "EPOCH 28 ...\n",
+      "Validation Accuracy = 0.931\n",
+      "\n",
+      "EPOCH 29 ...\n",
+      "Validation Accuracy = 0.938\n",
+      "\n",
+      "EPOCH 30 ...\n",
+      "Validation Accuracy = 0.946\n",
+      "\n",
+      "EPOCH 31 ...\n",
+      "Validation Accuracy = 0.941\n",
+      "\n",
+      "EPOCH 32 ...\n",
+      "Validation Accuracy = 0.948\n",
+      "\n",
+      "EPOCH 33 ...\n",
+      "Validation Accuracy = 0.953\n",
+      "\n",
+      "EPOCH 34 ...\n",
+      "Validation Accuracy = 0.949\n",
+      "\n",
+      "EPOCH 35 ...\n",
+      "Validation Accuracy = 0.941\n",
+      "\n",
+      "EPOCH 36 ...\n",
+      "Validation Accuracy = 0.942\n",
       "\n",
       "Model saved\n",
-      "CPU times: user 24.1 s, sys: 4.74 s, total: 28.8 s\n",
-      "Wall time: 30.5 s\n"
+      "CPU times: user 1min 1s, sys: 14.4 s, total: 1min 15s\n",
+      "Wall time: 1min 25s\n"
      ]
     }
    ],
@@ -608,7 +674,7 @@
     "%%time\n",
     "\n",
     "rate = 0.001\n",
-    "largeBiasPenalty = 0.13\n",
+    "largeBiasPenalty = 0.1\n",
     "\n",
     "logits = LeNet(x)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
@@ -636,7 +702,7 @@
     "    sess = tf.get_default_session()\n",
     "    for offset in range(0, num_examples, BATCH_SIZE):\n",
     "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
-    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: keep_probability})\n",
     "        total_accuracy += (accuracy * len(batch_x))\n",
     "    return total_accuracy / num_examples\n",
     "\n",
@@ -653,7 +719,7 @@
     "        for offset in range(0, num_examples, BATCH_SIZE):\n",
     "            end = offset + BATCH_SIZE\n",
     "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
-    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: keep_probability})\n",
     "            \n",
     "        validation_accuracy = evaluate(X_validation, y_validation)\n",
     "        print(\"EPOCH {} ...\".format(i+1))\n",
@@ -692,14 +758,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.860\n"
+      "Test Accuracy = 0.854\n"
      ]
     }
    ],
