--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
     "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
     "\n",
-    "EPOCHS = 36\n",
+    "EPOCHS = 6\n",
     "BATCH_SIZE = 1024 #orig 128\n",
     "# Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "mu = 0\n",
@@ -493,7 +493,7 @@
     "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
     "    # Activation.\n",
-    "    conv1 = tf.nn.relu(conv1)\n",
+    "    conv1 = tf.nn.dropout(tf.nn.relu(conv1), keep_prob)\n",
     "\n",
     "    # Pooling. Input = 28x28x10. Output = 14x14xdepth_conv1.\n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
@@ -503,7 +503,7 @@
     "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
     "    # Activation.\n",
-    "    conv2 = tf.nn.relu(conv2)\n",
+    "    conv2 = tf.nn.dropout(tf.nn.relu(conv2), keep_prob)\n",
     "\n",
     "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
@@ -516,14 +516,14 @@
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
     "    # Activation.\n",
-    "    fc1    = tf.nn.relu(fc1)\n",
+    "    fc1    = tf.nn.dropout(tf.nn.relu(fc1), keep_prob)\n",
     "\n",
     "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
     "    fc2_b  = tf.Variable(tf.zeros(84))\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
     "    \n",
     "    # Activation.\n",
-    "    fc2    = tf.nn.relu(fc2)\n",
+    "    fc2    = tf.nn.dropout(tf.nn.relu(fc2), keep_prob)\n",
     "\n",
     "    # Layer 5: Fully Connected. Input = 84. Output = 10.\n",
     "    fc3_b  = tf.Variable(tf.zeros(43))\n",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -557,116 +557,26 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.160\n",
+      "Validation Accuracy = 0.033\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.346\n",
+      "Validation Accuracy = 0.038\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.515\n",
+      "Validation Accuracy = 0.049\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.629\n",
+      "Validation Accuracy = 0.050\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.706\n",
+      "Validation Accuracy = 0.050\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.746\n",
-      "\n",
-      "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.794\n",
-      "\n",
-      "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.825\n",
-      "\n",
-      "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.851\n",
-      "\n",
-      "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.874\n",
-      "\n",
-      "EPOCH 11 ...\n",
-      "Validation Accuracy = 0.854\n",
-      "\n",
-      "EPOCH 12 ...\n",
-      "Validation Accuracy = 0.899\n",
-      "\n",
-      "EPOCH 13 ...\n",
-      "Validation Accuracy = 0.902\n",
-      "\n",
-      "EPOCH 14 ...\n",
-      "Validation Accuracy = 0.913\n",
-      "\n",
-      "EPOCH 15 ...\n",
-      "Validation Accuracy = 0.906\n",
-      "\n",
-      "EPOCH 16 ...\n",
-      "Validation Accuracy = 0.919\n",
-      "\n",
-      "EPOCH 17 ...\n",
-      "Validation Accuracy = 0.904\n",
-      "\n",
-      "EPOCH 18 ...\n",
-      "Validation Accuracy = 0.926\n",
-      "\n",
-      "EPOCH 19 ...\n",
-      "Validation Accuracy = 0.927\n",
-      "\n",
-      "EPOCH 20 ...\n",
-      "Validation Accuracy = 0.934\n",
-      "\n",
-      "EPOCH 21 ...\n",
-      "Validation Accuracy = 0.936\n",
-      "\n",
-      "EPOCH 22 ...\n",
-      "Validation Accuracy = 0.940\n",
-      "\n",
-      "EPOCH 23 ...\n",
-      "Validation Accuracy = 0.927\n",
-      "\n",
-      "EPOCH 24 ...\n",
-      "Validation Accuracy = 0.935\n",
-      "\n",
-      "EPOCH 25 ...\n",
-      "Validation Accuracy = 0.931\n",
-      "\n",
-      "EPOCH 26 ...\n",
-      "Validation Accuracy = 0.931\n",
-      "\n",
-      "EPOCH 27 ...\n",
-      "Validation Accuracy = 0.926\n",
-      "\n",
-      "EPOCH 28 ...\n",
-      "Validation Accuracy = 0.931\n",
-      "\n",
-      "EPOCH 29 ...\n",
-      "Validation Accuracy = 0.938\n",
-      "\n",
-      "EPOCH 30 ...\n",
-      "Validation Accuracy = 0.946\n",
-      "\n",
-      "EPOCH 31 ...\n",
-      "Validation Accuracy = 0.941\n",
-      "\n",
-      "EPOCH 32 ...\n",
-      "Validation Accuracy = 0.948\n",
-      "\n",
-      "EPOCH 33 ...\n",
-      "Validation Accuracy = 0.953\n",
-      "\n",
-      "EPOCH 34 ...\n",
-      "Validation Accuracy = 0.949\n",
-      "\n",
-      "EPOCH 35 ...\n",
-      "Validation Accuracy = 0.941\n",
-      "\n",
-      "EPOCH 36 ...\n",
-      "Validation Accuracy = 0.942\n",
+      "Validation Accuracy = 0.051\n",
       "\n",
       "Model saved\n",
-      "CPU times: user 1min 1s, sys: 14.4 s, total: 1min 15s\n",
-      "Wall time: 1min 25s\n"
+      "CPU times: user 22 s, sys: 2.88 s, total: 24.9 s\n",
+      "Wall time: 27.2 s\n"
      ]
     }
    ],
@@ -674,7 +584,7 @@
     "%%time\n",
     "\n",
     "rate = 0.001\n",
-    "largeBiasPenalty = 0.1\n",
+    "largeBiasPenalty = 0.01\n",
     "\n",
     "logits = LeNet(x)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
@@ -758,14 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.854\n"
+      "Test Accuracy = 0.052\n"
      ]
     }
    ],
