Oops, don't do dropout during validation!  Better...

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -470,12 +470,11 @@
     "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
     "\n",
-    "EPOCHS = 6\n",
-    "BATCH_SIZE = 1024 #orig 128\n",
+    "EPOCHS = 36\n",
+    "BATCH_SIZE = 2048 #orig 128\n",
     "# Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "mu = 0\n",
     "sigma = 0.1\n",
-    "keep_probability = 0.5\n",
     "\n",
     "# Declaring weights outside method for access later.  CLEANME: Move this to a proper class\n",
     "depth_conv1 = 10\n",
@@ -547,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -557,26 +556,35 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.033\n",
+      "Validation Accuracy = 0.063\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.038\n",
+      "Validation Accuracy = 0.052\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.049\n",
+      "Validation Accuracy = 0.064\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.050\n",
+      "Validation Accuracy = 0.049\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.050\n",
+      "Validation Accuracy = 0.059\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.051\n",
+      "Validation Accuracy = 0.087\n",
       "\n",
-      "Model saved\n",
-      "CPU times: user 22 s, sys: 2.88 s, total: 24.9 s\n",
-      "Wall time: 27.2 s\n"
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.094\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.101\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.115\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.110\n",
+      "\n"
      ]
     }
    ],
@@ -584,7 +592,8 @@
     "%%time\n",
     "\n",
     "rate = 0.001\n",
-    "largeBiasPenalty = 0.01\n",
+    "largeBiasPenalty = 0.06\n",
+    "keep_probability = 0.5\n",
     "\n",
     "logits = LeNet(x)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
@@ -612,7 +621,7 @@
     "    sess = tf.get_default_session()\n",
     "    for offset in range(0, num_examples, BATCH_SIZE):\n",
     "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
-    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: keep_probability})\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: 1.0})\n",
     "        total_accuracy += (accuracy * len(batch_x))\n",
     "    return total_accuracy / num_examples\n",
     "\n",
@@ -668,18 +677,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.052\n"
+      "Test Accuracy = 0.857\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
     "\n",
