--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -467,10 +467,8 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.contrib.layers import flatten\n",
     "\n",
-    "EPOCHS = 36\n",
+    "EPOCHS = 120\n",
     "BATCH_SIZE = 2048 #orig 128\n",
     "# Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "mu = 0\n",
@@ -546,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -556,35 +554,368 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.063\n",
+      "Validation Accuracy = 0.040\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.052\n",
+      "Validation Accuracy = 0.050\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.064\n",
+      "Validation Accuracy = 0.056\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.049\n",
+      "Validation Accuracy = 0.055\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.059\n",
+      "Validation Accuracy = 0.054\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.087\n",
+      "Validation Accuracy = 0.055\n",
       "\n",
       "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.094\n",
+      "Validation Accuracy = 0.056\n",
       "\n",
       "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.101\n",
+      "Validation Accuracy = 0.056\n",
       "\n",
       "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.115\n",
+      "Validation Accuracy = 0.056\n",
       "\n",
       "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.110\n",
-      "\n"
+      "Validation Accuracy = 0.055\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.054\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.054\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.054\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.055\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation Accuracy = 0.054\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation Accuracy = 0.060\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation Accuracy = 0.091\n",
+      "\n",
+      "EPOCH 21 ...\n",
+      "Validation Accuracy = 0.143\n",
+      "\n",
+      "EPOCH 22 ...\n",
+      "Validation Accuracy = 0.164\n",
+      "\n",
+      "EPOCH 23 ...\n",
+      "Validation Accuracy = 0.178\n",
+      "\n",
+      "EPOCH 24 ...\n",
+      "Validation Accuracy = 0.230\n",
+      "\n",
+      "EPOCH 25 ...\n",
+      "Validation Accuracy = 0.201\n",
+      "\n",
+      "EPOCH 26 ...\n",
+      "Validation Accuracy = 0.225\n",
+      "\n",
+      "EPOCH 27 ...\n",
+      "Validation Accuracy = 0.260\n",
+      "\n",
+      "EPOCH 28 ...\n",
+      "Validation Accuracy = 0.293\n",
+      "\n",
+      "EPOCH 29 ...\n",
+      "Validation Accuracy = 0.303\n",
+      "\n",
+      "EPOCH 30 ...\n",
+      "Validation Accuracy = 0.293\n",
+      "\n",
+      "EPOCH 31 ...\n",
+      "Validation Accuracy = 0.302\n",
+      "\n",
+      "EPOCH 32 ...\n",
+      "Validation Accuracy = 0.303\n",
+      "\n",
+      "EPOCH 33 ...\n",
+      "Validation Accuracy = 0.306\n",
+      "\n",
+      "EPOCH 34 ...\n",
+      "Validation Accuracy = 0.307\n",
+      "\n",
+      "EPOCH 35 ...\n",
+      "Validation Accuracy = 0.319\n",
+      "\n",
+      "EPOCH 36 ...\n",
+      "Validation Accuracy = 0.353\n",
+      "\n",
+      "EPOCH 37 ...\n",
+      "Validation Accuracy = 0.357\n",
+      "\n",
+      "EPOCH 38 ...\n",
+      "Validation Accuracy = 0.353\n",
+      "\n",
+      "EPOCH 39 ...\n",
+      "Validation Accuracy = 0.371\n",
+      "\n",
+      "EPOCH 40 ...\n",
+      "Validation Accuracy = 0.364\n",
+      "\n",
+      "EPOCH 41 ...\n",
+      "Validation Accuracy = 0.374\n",
+      "\n",
+      "EPOCH 42 ...\n",
+      "Validation Accuracy = 0.383\n",
+      "\n",
+      "EPOCH 43 ...\n",
+      "Validation Accuracy = 0.403\n",
+      "\n",
+      "EPOCH 44 ...\n",
+      "Validation Accuracy = 0.412\n",
+      "\n",
+      "EPOCH 45 ...\n",
+      "Validation Accuracy = 0.412\n",
+      "\n",
+      "EPOCH 46 ...\n",
+      "Validation Accuracy = 0.425\n",
+      "\n",
+      "EPOCH 47 ...\n",
+      "Validation Accuracy = 0.425\n",
+      "\n",
+      "EPOCH 48 ...\n",
+      "Validation Accuracy = 0.451\n",
+      "\n",
+      "EPOCH 49 ...\n",
+      "Validation Accuracy = 0.445\n",
+      "\n",
+      "EPOCH 50 ...\n",
+      "Validation Accuracy = 0.453\n",
+      "\n",
+      "EPOCH 51 ...\n",
+      "Validation Accuracy = 0.452\n",
+      "\n",
+      "EPOCH 52 ...\n",
+      "Validation Accuracy = 0.460\n",
+      "\n",
+      "EPOCH 53 ...\n",
+      "Validation Accuracy = 0.462\n",
+      "\n",
+      "EPOCH 54 ...\n",
+      "Validation Accuracy = 0.458\n",
+      "\n",
+      "EPOCH 55 ...\n",
+      "Validation Accuracy = 0.476\n",
+      "\n",
+      "EPOCH 56 ...\n",
+      "Validation Accuracy = 0.482\n",
+      "\n",
+      "EPOCH 57 ...\n",
+      "Validation Accuracy = 0.511\n",
+      "\n",
+      "EPOCH 58 ...\n",
+      "Validation Accuracy = 0.520\n",
+      "\n",
+      "EPOCH 59 ...\n",
+      "Validation Accuracy = 0.537\n",
+      "\n",
+      "EPOCH 60 ...\n",
+      "Validation Accuracy = 0.540\n",
+      "\n",
+      "EPOCH 61 ...\n",
+      "Validation Accuracy = 0.559\n",
+      "\n",
+      "EPOCH 62 ...\n",
+      "Validation Accuracy = 0.552\n",
+      "\n",
+      "EPOCH 63 ...\n",
+      "Validation Accuracy = 0.562\n",
+      "\n",
+      "EPOCH 64 ...\n",
+      "Validation Accuracy = 0.568\n",
+      "\n",
+      "EPOCH 65 ...\n",
+      "Validation Accuracy = 0.582\n",
+      "\n",
+      "EPOCH 66 ...\n",
+      "Validation Accuracy = 0.594\n",
+      "\n",
+      "EPOCH 67 ...\n",
+      "Validation Accuracy = 0.594\n",
+      "\n",
+      "EPOCH 68 ...\n",
+      "Validation Accuracy = 0.591\n",
+      "\n",
+      "EPOCH 69 ...\n",
+      "Validation Accuracy = 0.590\n",
+      "\n",
+      "EPOCH 70 ...\n",
+      "Validation Accuracy = 0.599\n",
+      "\n",
+      "EPOCH 71 ...\n",
+      "Validation Accuracy = 0.594\n",
+      "\n",
+      "EPOCH 72 ...\n",
+      "Validation Accuracy = 0.597\n",
+      "\n",
+      "EPOCH 73 ...\n",
+      "Validation Accuracy = 0.599\n",
+      "\n",
+      "EPOCH 74 ...\n",
+      "Validation Accuracy = 0.603\n",
+      "\n",
+      "EPOCH 75 ...\n",
+      "Validation Accuracy = 0.590\n",
+      "\n",
+      "EPOCH 76 ...\n",
+      "Validation Accuracy = 0.607\n",
+      "\n",
+      "EPOCH 77 ...\n",
+      "Validation Accuracy = 0.617\n",
+      "\n",
+      "EPOCH 78 ...\n",
+      "Validation Accuracy = 0.607\n",
+      "\n",
+      "EPOCH 79 ...\n",
+      "Validation Accuracy = 0.620\n",
+      "\n",
+      "EPOCH 80 ...\n",
+      "Validation Accuracy = 0.619\n",
+      "\n",
+      "EPOCH 81 ...\n",
+      "Validation Accuracy = 0.610\n",
+      "\n",
+      "EPOCH 82 ...\n",
+      "Validation Accuracy = 0.629\n",
+      "\n",
+      "EPOCH 83 ...\n",
+      "Validation Accuracy = 0.601\n",
+      "\n",
+      "EPOCH 84 ...\n",
+      "Validation Accuracy = 0.631\n",
+      "\n",
+      "EPOCH 85 ...\n",
+      "Validation Accuracy = 0.627\n",
+      "\n",
+      "EPOCH 86 ...\n",
+      "Validation Accuracy = 0.642\n",
+      "\n",
+      "EPOCH 87 ...\n",
+      "Validation Accuracy = 0.638\n",
+      "\n",
+      "EPOCH 88 ...\n",
+      "Validation Accuracy = 0.646\n",
+      "\n",
+      "EPOCH 89 ...\n",
+      "Validation Accuracy = 0.615\n",
+      "\n",
+      "EPOCH 90 ...\n",
+      "Validation Accuracy = 0.644\n",
+      "\n",
+      "EPOCH 91 ...\n",
+      "Validation Accuracy = 0.649\n",
+      "\n",
+      "EPOCH 92 ...\n",
+      "Validation Accuracy = 0.656\n",
+      "\n",
+      "EPOCH 93 ...\n",
+      "Validation Accuracy = 0.656\n",
+      "\n",
+      "EPOCH 94 ...\n",
+      "Validation Accuracy = 0.661\n",
+      "\n",
+      "EPOCH 95 ...\n",
+      "Validation Accuracy = 0.684\n",
+      "\n",
+      "EPOCH 96 ...\n",
+      "Validation Accuracy = 0.675\n",
+      "\n",
+      "EPOCH 97 ...\n",
+      "Validation Accuracy = 0.677\n",
+      "\n",
+      "EPOCH 98 ...\n",
+      "Validation Accuracy = 0.678\n",
+      "\n",
+      "EPOCH 99 ...\n",
+      "Validation Accuracy = 0.687\n",
+      "\n",
+      "EPOCH 100 ...\n",
+      "Validation Accuracy = 0.668\n",
+      "\n",
+      "EPOCH 101 ...\n",
+      "Validation Accuracy = 0.693\n",
+      "\n",
+      "EPOCH 102 ...\n",
+      "Validation Accuracy = 0.697\n",
+      "\n",
+      "EPOCH 103 ...\n",
+      "Validation Accuracy = 0.709\n",
+      "\n",
+      "EPOCH 104 ...\n",
+      "Validation Accuracy = 0.692\n",
+      "\n",
+      "EPOCH 105 ...\n",
+      "Validation Accuracy = 0.680\n",
+      "\n",
+      "EPOCH 106 ...\n",
+      "Validation Accuracy = 0.699\n",
+      "\n",
+      "EPOCH 107 ...\n",
+      "Validation Accuracy = 0.716\n",
+      "\n",
+      "EPOCH 108 ...\n",
+      "Validation Accuracy = 0.721\n",
+      "\n",
+      "EPOCH 109 ...\n",
+      "Validation Accuracy = 0.709\n",
+      "\n",
+      "EPOCH 110 ...\n",
+      "Validation Accuracy = 0.711\n",
+      "\n",
+      "EPOCH 111 ...\n",
+      "Validation Accuracy = 0.720\n",
+      "\n",
+      "EPOCH 112 ...\n",
+      "Validation Accuracy = 0.716\n",
+      "\n",
+      "EPOCH 113 ...\n",
+      "Validation Accuracy = 0.707\n",
+      "\n",
+      "EPOCH 114 ...\n",
+      "Validation Accuracy = 0.725\n",
+      "\n",
+      "EPOCH 115 ...\n",
+      "Validation Accuracy = 0.725\n",
+      "\n",
+      "EPOCH 116 ...\n",
+      "Validation Accuracy = 0.731\n",
+      "\n",
+      "EPOCH 117 ...\n",
+      "Validation Accuracy = 0.719\n",
+      "\n",
+      "EPOCH 118 ...\n",
+      "Validation Accuracy = 0.731\n",
+      "\n",
+      "EPOCH 119 ...\n",
+      "Validation Accuracy = 0.738\n",
+      "\n",
+      "EPOCH 120 ...\n",
+      "Validation Accuracy = 0.740\n",
+      "\n",
+      "Model saved\n",
+      "CPU times: user 3min 22s, sys: 1min 18s, total: 4min 40s\n",
+      "Wall time: 5min 34s\n"
      ]
     }
    ],
@@ -677,14 +1008,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.857\n"
+      "Test Accuracy = 0.695\n",
+      "CPU times: user 7.54 s, sys: 2.45 s, total: 9.99 s\n",
+      "Wall time: 7.22 s\n"
      ]
     }
    ],
