--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
    ],
    "source": [
     "\n",
-    "EPOCHS = 12\n",
+    "EPOCHS = 100\n",
     "BATCH_SIZE = 512 #orig 128\n",
     "# Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "mu = 0\n",
@@ -477,15 +477,17 @@
     "# Declaring weights outside method for access later.  CLEANME: Move this to a proper class\n",
     "depth_conv1 = 36\n",
     "depth_conv2 = 72\n",
+    "size_fc_2 = 100\n",
     "\n",
     "conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, depth_conv1), mean = mu, stddev = sigma))\n",
     "conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, depth_conv1, depth_conv2), mean = mu, stddev = sigma))\n",
     "fc1_W = tf.Variable(tf.truncated_normal(shape=(5*5*depth_conv2, 120), mean = mu, stddev = sigma))\n",
-    "fc2_W  = tf.Variable(tf.truncated_normal(shape=(5*5*depth_conv2, 84), mean = mu, stddev = sigma))\n",
-    "fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, num_classes), mean = mu, stddev = sigma))\n",
+    "fc2_W  = tf.Variable(tf.truncated_normal(shape=(5*5*depth_conv2, size_fc_2), mean = mu, stddev = sigma))\n",
+    "fc3_W  = tf.Variable(tf.truncated_normal(shape=(size_fc_2, num_classes), mean = mu, stddev = sigma))\n",
     "keep_prob = tf.placeholder(tf.float32) # probability to keep units\n",
     "\n",
     "def LeNet(x):    \n",
+    "    print(\"Charging up!\")\n",
     "\n",
     "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28xdepth_conv1.\n",
     "    conv1_b = tf.Variable(tf.zeros(depth_conv1))\n",
@@ -509,7 +511,6 @@
     "\n",
     "    # Flatten. Input = 5x5xdepth_conv2. Output = 1800.\n",
     "    fc0   = flatten(conv2)\n",
-    "    print(fc0)\n",
     "    \n",
     "    # Layer 3: Fully Connected. Input = 1800. Output = 120.\n",
     "    #fc1_b = tf.Variable(tf.zeros(120))\n",
@@ -518,14 +519,14 @@
     "    # Activation.\n",
     "    #fc1    = tf.nn.dropout(tf.nn.relu(fc1), keep_prob)\n",
     "\n",
-    "    # Layer 3: Fully Connected. Input = 1800. Output = 84.\n",
-    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    # Layer 3: Fully Connected. Input = 1800. Output = size_fc_2.\n",
+    "    fc2_b  = tf.Variable(tf.zeros(size_fc_2))\n",
     "    fc2    = tf.matmul(fc0, fc2_W) + fc2_b\n",
     "    \n",
     "    # Activation.\n",
     "    fc2    = tf.nn.dropout(tf.nn.relu(fc2), keep_prob)\n",
     "\n",
-    "    # Layer 4: Fully Connected. Input = 84. Output = num_classes.\n",
+    "    # Layer 4: Fully Connected. Input = size_fc_2. Output = num_classes.\n",
     "    fc3_b  = tf.Variable(tf.zeros(num_classes))\n",
     "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
     "    \n",
@@ -547,16 +548,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Flatten_43/Reshape:0\", shape=(?, 1800), dtype=float32)\n",
+      "Charging up!\n",
       "Training...\n",
-      "\n"
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.055\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.055\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.055\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.055\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 21 ...\n",
+      "Validation Accuracy = 0.051\n",
+      "\n",
+      "EPOCH 22 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 23 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 24 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 25 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 26 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 27 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 28 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 29 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 30 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 31 ...\n",
+      "Validation Accuracy = 0.053\n",
+      "\n",
+      "EPOCH 32 ...\n",
+      "Validation Accuracy = 0.054\n",
+      "\n",
+      "EPOCH 33 ...\n",
+      "Validation Accuracy = 0.072\n",
+      "\n",
+      "EPOCH 34 ...\n",
+      "Validation Accuracy = 0.182\n",
+      "\n",
+      "EPOCH 35 ...\n",
+      "Validation Accuracy = 0.391\n",
+      "\n",
+      "EPOCH 36 ...\n",
+      "Validation Accuracy = 0.573\n",
+      "\n",
+      "EPOCH 37 ...\n",
+      "Validation Accuracy = 0.718\n",
+      "\n",
+      "EPOCH 38 ...\n",
+      "Validation Accuracy = 0.835\n",
+      "\n",
+      "EPOCH 39 ...\n",
+      "Validation Accuracy = 0.885\n",
+      "\n",
+      "EPOCH 40 ...\n",
+      "Validation Accuracy = 0.890\n",
+      "\n",
+      "EPOCH 41 ...\n",
+      "Validation Accuracy = 0.941\n",
+      "\n",
+      "EPOCH 42 ...\n",
+      "Validation Accuracy = 0.952\n",
+      "\n",
+      "EPOCH 43 ...\n",
+      "Validation Accuracy = 0.951\n",
+      "\n",
+      "EPOCH 44 ...\n",
+      "Validation Accuracy = 0.960\n",
+      "\n",
+      "EPOCH 45 ...\n",
+      "Validation Accuracy = 0.967\n",
+      "\n",
+      "EPOCH 46 ...\n",
+      "Validation Accuracy = 0.957\n",
+      "\n",
+      "EPOCH 47 ...\n",
+      "Validation Accuracy = 0.970\n",
+      "\n",
+      "EPOCH 48 ...\n",
+      "Validation Accuracy = 0.973\n",
+      "\n",
+      "EPOCH 49 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 50 ...\n",
+      "Validation Accuracy = 0.968\n",
+      "\n",
+      "EPOCH 51 ...\n",
+      "Validation Accuracy = 0.976\n",
+      "\n",
+      "EPOCH 52 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 53 ...\n",
+      "Validation Accuracy = 0.978\n",
+      "\n",
+      "EPOCH 54 ...\n",
+      "Validation Accuracy = 0.977\n",
+      "\n",
+      "EPOCH 55 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 56 ...\n",
+      "Validation Accuracy = 0.977\n",
+      "\n",
+      "EPOCH 57 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 58 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 59 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 60 ...\n",
+      "Validation Accuracy = 0.978\n",
+      "\n",
+      "EPOCH 61 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "EPOCH 62 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 63 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 64 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 65 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 66 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 67 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 68 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 69 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "EPOCH 70 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 71 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 72 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "EPOCH 73 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 74 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 75 ...\n",
+      "Validation Accuracy = 0.974\n",
+      "\n",
+      "EPOCH 76 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 77 ...\n",
+      "Validation Accuracy = 0.989\n",
+      "\n",
+      "EPOCH 78 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 79 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 80 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 81 ...\n",
+      "Validation Accuracy = 0.977\n",
+      "\n",
+      "EPOCH 82 ...\n",
+      "Validation Accuracy = 0.985\n",
+      "\n",
+      "EPOCH 83 ...\n",
+      "Validation Accuracy = 0.978\n",
+      "\n",
+      "EPOCH 84 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 85 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 86 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 87 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "EPOCH 88 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 89 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 90 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 91 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 92 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 93 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "EPOCH 94 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "\n",
+      "EPOCH 95 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 96 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 97 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "EPOCH 98 ...\n",
+      "Validation Accuracy = 0.981\n",
+      "\n",
+      "EPOCH 99 ...\n",
+      "Validation Accuracy = 0.978\n",
+      "\n",
+      "EPOCH 100 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "Model saved\n",
+      "CPU times: user 7min 49s, sys: 2min 8s, total: 9min 58s\n",
+      "Wall time: 12min 19s\n"
      ]
     }
    ],
@@ -564,8 +868,8 @@
     "%%time\n",
     "\n",
     "rate = 0.00175\n",
-    "largeBiasPenalty = 0.075\n",
-    "keep_probability = 0.75\n",
+    "largeBiasPenalty = 0.065\n",
+    "keep_probability = 0.68\n",
     "\n",
     "logits = LeNet(x)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
@@ -649,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 133,
    "metadata": {
     "scrolled": true
    },
@@ -658,9 +962,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.059\n",
-      "CPU times: user 12.8 s, sys: 3.36 s, total: 16.1 s\n",
-      "Wall time: 12.2 s\n"
+      "Test Accuracy = 0.932\n",
+      "CPU times: user 16.3 s, sys: 3.6 s, total: 19.9 s\n",
+      "Wall time: 15.4 s\n"
      ]
     }
    ],
